--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <title>memasiki</title>
 </head>
 <body>
-    <main class="wrapper">
-        <div class="slider">
-            hey! i'm the funniest mem
-        </div>
+    <main class="wrapper slider">
+            <div class="photo_place">
+                    <img class="mem" src="./img/cover_6.jpg" alt="mem!">
+                    <img class="mem not_showing" src="./img/photo_2022-04-26_13-47-54.jpg" alt="mem!">
+            </div>
+            <div class="controller">
+                    <div class="point">
+                        <input type="radio" id="radio-1" name="controller"value="1" checked>
+                        <label for="radio-1"></label>  
+                                           
+                    </div>
+                    <div class="point">
+                        <input type="radio" id="radio-2" name="controller"value="2">
+                        <label for="radio-2"> </label>
+                    </div>
+                    <div class="point">
+                        <input type="radio" id="radio-3" name="controller"value="3">
+                        <label for="radio-3"></label>
+                    </div>
+                    <div class="point">
+                        <input type="radio" id="radio-4" name="controller"value="4">
+                        <label for="radio-4"></label>
+                    </div>
+            </div>            
+            <p>hey! i'm the funniest mem</p>   
     </main>
 </body>
 </html>
