feat: realise main slider funtion

--- a/index.html
+++ b/index.html
@@ -10,30 +10,35 @@
 </head>
 <body>
     <main class="wrapper slider">
-            <div class="photo_place">
-                    <img class="mem" src="./img/cover_6.jpg" alt="mem!">
-                    <img class="mem not_showing" src="./img/photo_2022-04-26_13-47-54.jpg" alt="mem!">
+        <input type="radio" id="radio-1" name="controller"value="1" >
+        <input type="radio" id="radio-2" name="controller"value="2">
+        <input type="radio" id="radio-3" name="controller"value="3">
+        <input type="radio" id="radio-4" name="controller"value="4">
+        <div class="photo_place">
+            <div class="mem">
+                <img  src="./img/cover_6.jpg" alt="mem!">
+                <p>hey! i'm the FIRST mem</p>
             </div>
-            <div class="controller">
-                    <div class="point">
-                        <input type="radio" id="radio-1" name="controller"value="1" checked>
-                        <label for="radio-1"></label>  
-                                           
-                    </div>
-                    <div class="point">
-                        <input type="radio" id="radio-2" name="controller"value="2">
-                        <label for="radio-2"> </label>
-                    </div>
-                    <div class="point">
-                        <input type="radio" id="radio-3" name="controller"value="3">
-                        <label for="radio-3"></label>
-                    </div>
-                    <div class="point">
-                        <input type="radio" id="radio-4" name="controller"value="4">
-                        <label for="radio-4"></label>
-                    </div>
-            </div>            
-            <p>hey! i'm the funniest mem</p>   
+            <div class="mem">
+                <img src="./img/photo_2022-04-26_13-47-54.jpg" alt="mem!">
+                <p>hey! i'm the SECOND mem</p>
+            </div>
+            <div class="mem">
+                <img src="./img/photo_2022-04-05_01-40-30.jpg" alt="mem!">
+                <p>hey! i'm the THIRD mem</p>
+            </div>
+            <div class="mem">
+                <img src="./img/6e6d3f866f769846bfcc9bd87ee23e82.jpg" alt="mem!">
+                <p>hey! i'm the FOURTH mem</p>
+            </div>
+        </div>
+        <div class="controller">
+            <label for="radio-1"></label>  
+            <label for="radio-2"> </label>
+            <label for="radio-3"></label>
+            <label for="radio-4"></label>
+        </div>      
+          
     </main>
 </body>
 </html>
